# Templates

./: .gitignore  .gitmodules  README.md  pyproject.toml
Python/: mamba_demo.py  mamba_meta_demo.py  pyproject.toml
Python/MAMBA_SUPER_META/: __init__.py  pyproject.toml
Python/MAMBA_SUPER_META/debug/: __init__.py  decorators.py  traceback_with_args.py
Python/MAMBA_SUPER_META/debug/MambaTrace/: Colorizer.py
Python/MAMBA_SUPER_META/general/Interface/Communication/TCP/: server.py
Python/MAMBA_SUPER_META/general/Interface/Communication/TCP_rulefilter/: muta_funcs.py  mutator_funcs.py
Python/Poetry/: pyproject.toml
Python/Templates/gui/QT/: simple_QT6.py  simple_mamba_QT6.py
Python/mamba/: pyproject.toml
Python/mamba/gui/QT/: __init__.py
Python/mamba/gui/QT/Widgets/: QVBoxScrolled.py  __init__.py
Python/mamba/gui/QT/Widgets/QChart/: QChart.py  XYTableModel.py
Python/mamba/parsers/: argument_parser.py
Python/mamba/template/: create.py
Python/mamba/template/create/: __init__.py  create.py
Python/mamba/template/create/generic/: project.py
Python/mamba/template/generic/module/: __main__.py
Python/mamba/template/generic/package/: __main__.py
Python/mamba/template/generic/project/: __main__.py
Python/mamba/template/generic_mamba/: __init__.py
Python/mamba/template/generic_mamba/project/: __main__.py
Python/mamba/template/templates/project/generic/src/: main.py
Python/mamba/template/templates/project_type/django/: .gitignore
Python/mamba/template/templates/project_type/django/src/: main.py
Python/mamba/template/templates/project_type/django/src/Bootstrap_Project_Files/: mamba_landing.bsdesign
Python/mamba/template/templates/project_type/django/src/django_mamba/django_mamba/: asgi.py
Python/mamba/template/templates/project_type/django/src/django_mamba/django_mamba_app/: __init__.py  urls.py  views.py
Python/mamba/template/templates/project_type/django/src/django_mamba/django_mamba_app/templates/: landing.html  login.html
Python/mamba/template/templates/project_type/django/src/django_mamba/static/css/: login_page.css
Python/mamba/template/templates/project_type/django/src/django_mamba/static/js/: client.js
Python/mamba/template/templates/project_type/generic_mamba/app/: qt_app.py  window.ui
Python/tests/deploy/: dummy.py
Python/tests/devel/: __init__.py  devel_path_hack.py  dummy.py  merged.py  path_hack.py  test_colorized_traceback_with_args.py  test_lazy_logging.py  test_traceback_with_args.py
Python/tests/devel/path_hack_test/: __init__.py
Python/vscode/: tasks.json
src/: mamba_demo.py  pyproject.toml
src/MAMBA_SUPER_META/debug/: traceback_with_args.py
src/MAMBA_SUPER_META/debug/MambaTrace/: Colorizer.py  __init__.py
src/MAMBA_SUPER_META/debug/MambaTrace/base/: Frame.py  Trace.py  __init__.py
src/MAMBA_SUPER_META/general/: filters.py
src/MAMBA_SUPER_META/general/Interface/Communication/: __init__.py
src/MAMBA_SUPER_META/general/Interface/Communication/TCP/: client.py  functions.py
src/MAMBA_SUPER_META/general/Interface/Communication/TCP_rulefilter/: __init__.py  mutator_funcs.py  mutator_poly.py
src/MAMBA_SUPER_META/general/Interface/Communication/base/: client.py  send_recieve.py  server.py
src/MAMBA_SUPER_META/logging/: __init__.py
src/MAMBA_SUPER_META/thread/orchestration/: orchestrator.py
src/Poetry/: pyproject.toml
src/_Templates/_project_structure/: README.md
src/mamba/: pyproject.toml
src/mamba/gui/QT/Widgets/: FileDialog.py  QChartScrolled.py  QVBoxScrolled.py
src/mamba/gui/QT/Widgets/QChart/: __init__.py
src/mamba/parsers/: argument_parser.py
src/mamba/template/: create.py
src/mamba/template/django/: __init__.py
src/mamba/template/django/module/: __main__.py
src/mamba/template/file_templates/: ReadMe.py  __init__.py  format_strings.py  pyproject.py
src/mamba/template/generic/: __init__.py
src/mamba/template/generic/module/: __main__.py
src/mamba/template/generic/package/: __main__.py
src/mamba/template/generic/project/: __main__.py
src/mamba/template/generic_mamba/: __init__.py
src/mamba/template/generic_mamba/app/: __main__.py
src/mamba/template/generic_mamba/package/: __main__.py
src/mamba/template/generic_mamba/project/: __main__.py
src/mamba/template/generic_mamba/project/templates/: App_UI.py  ReadMe.py  __init__.py  pyproject.py
src/mamba/template/templates/project_type/django/docs/: packages.md
src/mamba/template/templates/project_type/django/src/django_mamba/: manage.py
src/mamba/template/templates/project_type/django/src/django_mamba/django_mamba/: settings.py  urls.py  wsgi.py
src/mamba/template/templates/project_type/django/src/django_mamba/django_mamba_app/: apps.py  urls.py  views.py
src/mamba/template/templates/project_type/generic_mamba/app/: cli_app.py  qt_app.py
src/mamba/template/templates/project_type/generic_mamba/src/: main.py
src/vscode/: launch.json  tasks-poetry.json
(+8 files in other folders)
