[tool.poetry]
name = "mamba"
version = "0.0.0"
authors=["Brandon Fanti: B14CKM4MB4",]
description="The mamba package for rapid prototyping"

packages = [
    { include = "template",  from="mamba", to="mamba"},
    { include = "parsers",   from="mamba", to="mamba"},
    { include = "gui",       from="mamba", to="mamba"},
    { include = "general",   from="MAMBA_SUPER_META", to="mamba_meta"},
    { include = "path_hack", from="MAMBA_SUPER_META", to="mamba_meta"},
    { include = "debug",     from="MAMBA_SUPER_META", to="mamba_meta"},
    { include = "logging",   from="MAMBA_SUPER_META", to="mamba_meta"},
]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "6.9.0"
