[tool.poetry]
name = "mamba"
version = "0.0.0"
authors=["Brandon Fanti: B14CKM4MB4",]
description="The MAMBA_SUPER_META package is a bunch of generically useful python stuff-"

packages = [
    { include = "general",   from=".", to="mamba.meta"},
    { include = "path_hack", from=".", to="mamba.meta"},
    { include = "debug",     from=".", to="mamba.meta"},
    { include = "logging",   from=".", to="mamba.meta"},
]